--- a/Job-Tips.html
+++ b/Job-Tips.html
@@ -37,10 +37,10 @@
           </div>
           <div class="u-nav-container">
             <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Home.html" style="padding: 10px 20px;">Home</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Credit-Benefits.html" style="padding: 10px 20px;">Credit Benefits</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Credit-Cost.html" style="padding: 10px 20px;">Credit Cost</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Avoiding-Scams.html" style="padding: 10px 20px;">Avoiding Scams</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Job-Tips.html" style="padding: 10px 20px;">Job Tips</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Smart-Cosumer.html" style="padding: 10px 20px;">Smart Cosumer</a>
 </li></ul>
           </div>
           <div class="u-nav-container-collapse">
@@ -48,10 +48,10 @@
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html">Home</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Credit-Benefits.html">Credit Benefits</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Credit-Cost.html">Credit Cost</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Avoiding-Scams.html">Avoiding Scams</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Job-Tips.html">Job Tips</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Smart-Cosumer.html">Smart Cosumer</a>
 </li></ul>
               </div>
             </div>
@@ -59,11 +59,35 @@
           </div>
         </nav>
         <h1 class="u-text u-text-default u-text-1">Spending With Sam</h1>
-        <a href="Credit-Cost.html" class="u-border-1 u-border-active-palette-2-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-btn u-button-style u-none u-text-palette-1-base u-btn-1">Credit Cost</a>
-        <a href="Credit-Benefits.html" class="u-border-1 u-border-active-palette-2-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-btn u-button-style u-none u-text-palette-1-base u-btn-2">Credit Benefits</a>
-        <a href="Avoiding-Scams.html" class="u-border-1 u-border-active-palette-2-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-btn u-button-style u-none u-text-palette-1-base u-btn-3">Avoiding Scams</a>
-        <a href="Job-Tips.html" class="u-border-1 u-border-active-palette-2-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-btn u-button-style u-none u-text-palette-1-base u-btn-4">Job Tips</a>
-        <a href="Home.html" class="u-active-none u-border-2 u-border-no-left u-border-no-right u-border-no-top u-border-palette-1-base u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-btn-rectangle u-button-style u-hover-none u-none u-radius-0 u-top-left-radius-0 u-top-right-radius-0 u-btn-5">Home</a>
+        <div class="u-list u-list-1">
+          <div class="u-repeater u-repeater-1">
+            <div class="u-container-style u-list-item u-repeater-item">
+              <div class="u-container-layout u-similar-container u-container-layout-1">
+                <a href="Avoiding-Scams.html" class="u-border-1 u-border-active-palette-2-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-btn u-button-style u-custom-item u-none u-text-palette-1-base u-btn-1">Avoiding Scams</a>
+              </div>
+            </div>
+            <div class="u-container-style u-list-item u-repeater-item">
+              <div class="u-container-layout u-similar-container u-container-layout-2">
+                <a href="Credit-Cost.html" class="u-border-1 u-border-active-palette-2-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-btn u-button-style u-custom-item u-none u-text-palette-1-base u-btn-2">Credit Cost</a>
+              </div>
+            </div>
+            <div class="u-container-style u-list-item u-repeater-item">
+              <div class="u-container-layout u-similar-container u-container-layout-3">
+                <a href="#" class="u-border-1 u-border-active-palette-2-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-btn u-button-style u-custom-item u-none u-text-palette-1-base u-btn-3">Smart Consumer</a>
+              </div>
+            </div>
+            <div class="u-container-style u-list-item u-repeater-item">
+              <div class="u-container-layout u-similar-container u-container-layout-4">
+                <a href="Job-Tips.html" class="u-border-1 u-border-active-palette-2-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-btn u-button-style u-custom-item u-none u-text-palette-1-base u-btn-4">Job Tips</a>
+              </div>
+            </div>
+            <div class="u-container-style u-list-item u-repeater-item">
+              <div class="u-container-layout u-similar-container u-container-layout-5">
+                <a href="Job-Tips.html" class="u-border-1 u-border-active-palette-2-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-btn u-button-style u-custom-item u-none u-text-palette-1-base u-btn-5">Job Tips</a>
+              </div>
+            </div>
+          </div>
+        </div>
       </div></header>
     <section class="u-clearfix u-section-1" id="sec-b85d">
       <div class="u-clearfix u-sheet u-sheet-1">
@@ -91,10 +115,18 @@
     
     
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-6144"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1">Copyright @ Sam Hooper 2023</p>
+        <p class="u-small-text u-text u-text-variant u-text-1">Sample text. Click to select the Text Element.</p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
       <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
-
+        <span>Website Templates</span>
+      </a>
+      <p class="u-text">
+        <span>created with</span>
+      </p>
+      <a class="u-link" href="" target="_blank">
+        <span>Website Builder Software</span>
+      </a>. 
+    </section>
   
 </body></html>
